# webassembly-practices

./: README.md
sierpinski_triangle/: Cargo.toml  README.md
sierpinski_triangle/src/: lib.rs
sierpinski_triangle/static/: index.html
